--- a/proto/build.gradle
+++ b/proto/build.gradle
@@ -20,7 +20,8 @@ protobuf {
             }
             task.plugins {
                 grpc {
-                    option 'lite' }
+                    option 'lite'
+                }
             }
         }
     }
