--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,8 +1,14 @@
 [versions]
+agp = "7.4.2"
 compose = "1.8.0"
 compose-bom = "2023.10.01"
 coreKtx = "1.12.0"
+kotlin = "1.9.10"
 lifecycle = "2.6.2"
+protobuf = "0.9.4"
+protoc = "3.19.2"
+protoc-kotlin = "1.4.0"
+protobufGradlePlugin = "0.9.4"
 tomcat = "6.0.53"
 checker = "3.34.0"
 grpc = "1.59.0"
@@ -19,14 +25,18 @@ compose-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling
 core-ktx = { module = "androidx.core:core-ktx", version.ref = "coreKtx" }
 grpc-core = { module = "io.grpc:grpc-core", version.ref = "grpc" }
 grpc-netty = { module = "io.grpc:grpc-netty", version.ref = "grpc" }
+grpc-protobuf-lite = { module = "io.grpc:grpc-protobuf-lite", version.ref = "grpc" }
 grpc-okhttp = { module = "io.grpc:grpc-okhttp", version.ref = "grpc" }
 grpc-services = { module = "io.grpc:grpc-services", version.ref = "grpc" }
+grpc-stub = { module = "io.grpc:grpc-stub", version.ref = "grpc" }
 lifecycle-runtime-ktx = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "lifecycle" }
+protobuf-gradle-plugin = { module = "com.google.protobuf:protobuf-gradle-plugin", version.ref = "protobufGradlePlugin" }
 tomcat-annotations = { module = "org.apache.tomcat:annotations-api", version.ref = "tomcat" }
 checker-qual = { module = "org.checkerframework:checker-qual", version.ref = "checker" }
-grpc-protobuf-lite = { module = "io.grpc:grpc-protobuf-lite", version.ref = "grpc" }
-grpc-stub = { module = "io.grpc:grpc-stub", version.ref = "grpc" }
 guava = { module = "com.google.guava:guava", version.ref = "guava" }
 
 [plugins]
+androidApplication = { id = "com.android.application", version.ref = "agp" }
+kotlinAndroid = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
+protobuf = { id = "com.google.protobuf", version.ref = "protobuf" }
 
