--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,6 +3,7 @@ agp = "8.1.2"
 compose = "1.8.0"
 compose-bom = "2023.10.01"
 coreKtx = "1.12.0"
+javax-annotation = "1.3.2"
 kotlin = "1.9.10"
 lifecycle = "2.6.2"
 protobuf = "0.9.4"
@@ -29,9 +30,9 @@ grpc-protobuf-lite = { module = "io.grpc:grpc-protobuf-lite", version.ref = "grp
 grpc-okhttp = { module = "io.grpc:grpc-okhttp", version.ref = "grpc" }
 grpc-services = { module = "io.grpc:grpc-services", version.ref = "grpc" }
 grpc-stub = { module = "io.grpc:grpc-stub", version.ref = "grpc" }
+javax-annotation-api = { module = "javax.annotation:javax.annotation-api", version.ref = "javax-annotation" }
 lifecycle-runtime-ktx = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "lifecycle" }
 protobuf-gradle-plugin = { module = "com.google.protobuf:protobuf-gradle-plugin", version.ref = "protobufGradlePlugin" }
-tomcat-annotations = { module = "org.apache.tomcat:annotations-api", version.ref = "tomcat" }
 checker-qual = { module = "org.checkerframework:checker-qual", version.ref = "checker" }
 guava = { module = "com.google.guava:guava", version.ref = "guava" }
 
