--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -3,14 +3,16 @@ agp = "8.1.2"
 compose = "1.8.0"
 compose-bom = "2023.10.01"
 coreKtx = "1.12.0"
+grpc-kotlin-stub = "1.4.0"
 javax-annotation = "1.3.2"
 kotlin = "1.9.10"
+kotlinx-coroutines = "1.7.3"
 lifecycle = "2.6.2"
 protobuf = "0.9.4"
+protobuf-kotlin = "3.25.0"
 protoc = "3.19.2"
 protoc-kotlin = "1.4.0"
-protobufGradlePlugin = "0.9.4"
-tomcat = "6.0.53"
+protobuf-gradle-plugin = "0.9.4"
 checker = "3.34.0"
 grpc = "1.59.0"
 guava = "21.0"
@@ -25,16 +27,19 @@ compose-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
 compose-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
 core-ktx = { module = "androidx.core:core-ktx", version.ref = "coreKtx" }
 grpc-core = { module = "io.grpc:grpc-core", version.ref = "grpc" }
+grpc-kotlin-stub = { module = "io.grpc:grpc-kotlin-stub", version.ref = "grpc-kotlin-stub" }
 grpc-netty = { module = "io.grpc:grpc-netty", version.ref = "grpc" }
 grpc-protobuf-lite = { module = "io.grpc:grpc-protobuf-lite", version.ref = "grpc" }
 grpc-okhttp = { module = "io.grpc:grpc-okhttp", version.ref = "grpc" }
 grpc-services = { module = "io.grpc:grpc-services", version.ref = "grpc" }
 grpc-stub = { module = "io.grpc:grpc-stub", version.ref = "grpc" }
 javax-annotation-api = { module = "javax.annotation:javax.annotation-api", version.ref = "javax-annotation" }
+kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "kotlinx-coroutines" }
 lifecycle-runtime-ktx = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "lifecycle" }
-protobuf-gradle-plugin = { module = "com.google.protobuf:protobuf-gradle-plugin", version.ref = "protobufGradlePlugin" }
+protobuf-gradle-plugin = { module = "com.google.protobuf:protobuf-gradle-plugin", version.ref = "protobuf-gradle-plugin" }
 checker-qual = { module = "org.checkerframework:checker-qual", version.ref = "checker" }
 guava = { module = "com.google.guava:guava", version.ref = "guava" }
+protobuf-kotlin = { module = "com.google.protobuf:protobuf-kotlin", version.ref = "protobuf-kotlin" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
